--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Courses by AbdurRahman G</title>
-</head>
-<body>
-    <h1>Computer Courses by AbdurRahman G</h1>
-</body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Computer Courses by AbdurRahman G</title>
+    </head>
+
+    <body>
+        <h1>Computer Courses by AbdurRahman G</h1>
+        <p>
+            <a href="https://docs.google.com/presentation/d/1oDc6B7nhKihHX40GeDbGNG-lc8e2osCXdvOiWog9SYo/edit?usp=sharing" target="_blank">Google Slide Presentation</a>
+            for Computer Courses
+        </p>
+    </body>
+
 </html>
