--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <h1>Computer Courses by AbdurRahman G</h1>
         <p>
-            <a href="https://docs.google.com/presentation/d/1oDc6B7nhKihHX40GeDbGNG-lc8e2osCXdvOiWog9SYo/edit?usp=sharing" target="_blank">Google Slide Presentation</a>
+            <a href="https://docs.google.com/presentation/d/1oDc6B7nhKihHX40GeDbGNG-lc8e2osCXdvOiWog9SYo/edit?usp=sharing" target="_blank">Google Slides Presentation</a>
             for Computer Courses
         </p>
     </body>
