--- a/index.html
+++ b/index.html
@@ -1,19 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Computer Courses by AbdurRahman G</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Computer Courses by AbdurRahman G</title>
+</head>
 
-    <body>
-        <h1>Computer Courses by AbdurRahman G</h1>
-        <p>
-            <a href="https://docs.google.com/presentation/d/1oDc6B7nhKihHX40GeDbGNG-lc8e2osCXdvOiWog9SYo/edit?usp=sharing" target="_blank">Google Slides Presentation</a>
-            for Computer Courses
-        </p>
-    </body>
+<body>
+    <h1>Computer Courses by AbdurRahman G</h1>
+    <p>
+        <a href="https://docs.google.com/presentation/d/1oDc6B7nhKihHX40GeDbGNG-lc8e2osCXdvOiWog9SYo/edit?usp=sharing"
+            target="_blank">Google Slides Presentation</a>
+        for Computer Courses
+    </p>
+
+    <p>
+        <a href="https://nielit.gov.in/sites/default/files/syllabus_of_bcc_1.pdf" target="_blank">Syllabus by NIELIT</a>
+    </p>
+
+    <h2>OBJECTIVE:</h2>
+    <p>The course is designed to aim at imparting a basic level appreciation programme for the common man. After
+        completing the course the incumbent is able to the use the computer for basic purposes of preparing his
+        personnel/business letters, viewing information on Internet (the web), sending mails, using internet banking
+        services etc. This allows a common man or housewife to be also a part of computer users list by making them
+        digitally literate. This would also aid the PC penetration program. This helps the small business communities,
+        housewives to maintain their small account using the computers and enjoy in the world of Information Technology.
+    </p>
+    <h3>SYLLABUS OUTLINE:</h3>
+    <ol>
+        <li>
+            <strong>
+                Knowing computer:
+            </strong>
+            What is Computer, Basic Applications of Computer; Components of
+            Computer System, Central Processing Unit (CPU), VDU, Keyboard and Mouse, Other
+            input/output Devices, Computer Memory, Concepts of Hardware and Software; Concept of
+            Computing, Data and Information; Applications of IECT; Connecting keyboard, mouse, monitor
+            and printer to CPU and checking power supply.
+        </li>
+        <li>
+            <strong>
+                Operating Computer using GUI Based Operating System:
+            </strong>
+            <p>
+                What is an Operating System;
+                Basics of Popular Operating Systems; The User Interface, Using Mouse; Using right Button of the
+                Mouse and Moving Icons on the screen, Use of Common Icons, Status Bar, Using Menu and
+                Menu-selection, Running an Application, Viewing of File, Folders and Directories, Creating and
+                Renaming of files and folders, Opening and closing of different Windows; Using help; Creating
+                Short cuts, Basics of O.S Setup; Common utilities.
+            </p>
+        </li>
+        <li>
+            <strong>
+                Understanding Word Processing:
+            </strong>
+            <p>
+                Word Processing Basics; Opening and Closing of
+                documents; Text creation and Manipulation; Formatting of text; Table handling; Spell check,
+                language setting and thesaurus; Printing of word document.
+            </p>
+        </li>
+        <li>
+            <strong>
+                Using Spread Sheet:
+            </strong>
+            <p>
+                Basics of Spreadsheet; Manipulation of cells; Formulas and
+                Functions; Editing of Spread Sheet, printing of Spread Sheet.
+            </p>
+        </li>
+        <li>
+            <strong>
+                Introduction to Internet, WWW and Web Browsers:
+            </strong>
+            <p>
+                Basic of Computer networks; LAN,
+                WAN; Concept of Internet; Applications of Internet; connecting to internet; What is ISP;
+                Knowing the Internet; Basics of internet connectivity related troubleshooting, World Wide Web;
+                Web Browsing softwares, Search Engines; Understanding URL; Domain name; IP Address; Using
+                e-governance website.
+            </p>
+        </li>
+        <li>
+            <strong>
+                Communications and collaboration:
+            </strong>
+            <p>
+                Basics of electronic mail; Getting an email account;
+                Sending and receiving emails; Accessing sent emails; Using Emails; Document collaboration;
+                Instant Messaging; Netiquettes.
+            </p>
+        </li>
+        <li>
+            <strong>
+                Making Small Presentation:
+            </strong>
+            <p>
+                Basics of presentation software; Creating Presentation;
+                Preparation and Presentation of Slides; Slide Show; Taking printouts of presentation / handouts.
+            </p>
+        </li>
+        <li>
+            <strong>
+                Financial Literacy for Banking Scheme and Applications:
+            </strong>
+            <p>
+                Why savings are needed, Why
+                save in a bank, Banking products-ATM card, Banking Instruments-Cheque, Demand Draft (DD),
+                Banking Services Delivery Channels, Know Your Customer (KYC), Opening of bank account and
+                documents required, Types of bank accounts, Bank’s services including remittances, loan,
+                mobile banking, Overdraft, Pension etc., Pradhan Mantri Jan Dhan Yojana (PMJDY), password
+                security and ATM withdrawal, Insurance, Social Security Schemes-Atal Pension Yojana (APY),
+                Pradhan Mantri Suraksha Bima Yojana (PMSBY), Pradhan Mantri Jeevan Jyoti Bima Yojana
+                (PMJJBY), Pradhan Mantri Mudra Yojana (PMMY).
+            </p>
+        </li>
+    </ol>
+    <h3>DETAILED SYLLABUS</h3>
+    <ol>
+        <li>KNOWING COMPUTER</li>
+        <li>OPERATING COMPUTER USING GUI BASED OPERATING SYSTEM</li>
+        <li>UNDERSTANDING WORD PROCESSING</li>
+        <li>USING SPREAD SHEET</li>
+        <li>INTRODUCTION TO INTERNET, WWW AND WEB BROWSERS</li>
+        <li>COMMUNICATIONS AND COLLABORATION</li>
+        <li>MAKING SMALL PRESENTATIONS</li>
+        <li>FINANCIAL LITERACY FOR BANKING SCHEME AND APPLICATIONS</li>
+    </ol>
+</body>
 
 </html>
