History and Types of Computers Refrences added

--- a/index.html
+++ b/index.html
@@ -130,6 +130,30 @@
         <li>MAKING SMALL PRESENTATIONS</li>
         <li>FINANCIAL LITERACY FOR BANKING SCHEME AND APPLICATIONS</li>
     </ol>
+
+    <section class="reference">
+        <h3>History References Types of Computers</h3>
+        <ul>
+            <li>
+                <h4>
+                    <a href="https://www.toppr.com/guides/computer-aptitude-and-knowledge/basics-of-computers/history-of-computers/#:~:text=Early%20History%20of%20Computer,-Since%20the%20evolution&text=One%20of%20the%20earliest%20and,was%20a%20general%2Dpurpose%20computer."
+                        target="_blank">History of Computers by toppr</a>
+                </h4>
+            </li>
+            <li>
+                <h4>
+                    <a href="https://www.javatpoint.com/history-of-computer"
+                        target="_blank">History of Computers by javatpoint</a>
+                </h4>
+            </li>
+            <li>
+                <h4>
+                    <a href="https://www.geeksforgeeks.org/history-of-computers/"
+                        target="_blank">History of Computers by geeksforgeeks</a>
+                </h4>
+            </li>
+        </ul>
+    </section>
 </body>
 
 </html>
